--- a/pictoMaker/Info.plist
+++ b/pictoMaker/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>生成した画像を保存します</string>
+    <key>GADApplicationIdentifier</key>
+    <string>ca-app-pub-9723575977675510~5417615385</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
